After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 637763 - [GtkAboutDialog] no longer display contact link
[GtkAboutDialog] no longer display contact link
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
2.91.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2010-12-21 16:56 UTC by Frederic Peters
Modified: 2010-12-22 06:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
epiphany about dialog with gtk master (16.51 KB, image/png)
2010-12-21 16:57 UTC, Frederic Peters
Details

Description Frederic Peters 2010-12-21 16:56:49 UTC
Epiphany has "Contact us at:", "<epiphany-list@gnome.org>" in its authors array of strings, the second line is not rendered in the new about dialog; cf attached screenshot.
Comment 1 Frederic Peters 2010-12-21 16:57:17 UTC
Created attachment 176845 [details]
epiphany about dialog with gtk master